Fix to text and logo being cut off at top of screen

--- a/app/style.css
+++ b/app/style.css
@@ -37,7 +37,7 @@ p {
 
 .block-container {
     width: 100%;
-    padding: 2rem 2rem 2rem;
+    padding: 3rem 2rem 2rem;
     min-width: auto;
     max-width: initial;
 }
